<resources>
    <string name="app_name">ICE4</string>
    <string name="clear">\u0043</string>
    <string name="percent">\u0025</string>
    <string name="backspace">\uf55a</string>
    <string name="divide">\uf529</string>
    <string name="multiply">\uf00d</string>
    <string name="minus">\uf068</string>
    <string name="plus">\u002b</string>
    <string name="plusMinus">\ue43c</string>
    <string name="equals">\u003d</string>
    <string name="zero">\u0030</string>
    <string name="one">\u0031</string>
    <string name="two">\u0032</string>
    <string name="three">\u0033</string>
    <string name="four">\u0034</string>
    <string name="five">\u0035</string>
    <string name="six">\u0036</string>
    <string name="seven">\u0037</string>
    <string name="eight">\u0038</string>
    <string name="nine">\u0039</string>
    <string name="decimal">.</string>


</resources>